src/objects/Trenching_Table__c.object
<CustomObject>
    <fields>
        <fullName>Adder_Ft__c</fullName>
        <label>Adder Ft</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adder_W__c</fullName>
        <label>Adder ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adder__c</fullName>
        <label>Adder ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Trenching Table</relationshipLabel>
        <relationshipName>Trenching_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maximum_Size__c</fullName>
        <label>Maximum Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Trench_Length__c</fullName>
        <label>Maximum Trench Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Size__c</fullName>
        <label>Minimum Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Trench_Length__c</fullName>
        <label>Minimum Trench Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wire_Type__c</fullName>
        <label>Wire Type</label>
        <picklist>
            <picklistValues>
                <fullName>Copper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Trenching Table</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Trenching Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trenching Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>